# unity-rlottie

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md
.github/workflows/: activation.yaml  build_native_libraries.yaml
dependency/pixman/: pixman-arm-intrisics.cpp  pixman-cpp-standard.cpp
projects/AndroidStudio/: build.gradle  settings.gradle
projects/AndroidStudio/app/: build.gradle
projects/AndroidStudio/app/src/main/: AndroidManifest.xml
projects/AndroidStudio/app/src/main/res/values/: strings.xml  themes.xml
projects/AndroidStudio/app/src/main/res/values-night/: themes.xml
projects/AndroidStudio/gradle/wrapper/: gradle-wrapper.properties
projects/CMake/: .gitignore  CMakeLists.txt  CMakeSettings.json
src/: ExportApi.h  LottiePlugin.cpp  LottiePlugin.h
unity/RLottieUnity/: .editorconfig  .gitignore
unity/RLottieUnity/Assets/LottiePlugin/: LottiePluginImpl.asmdef  package.json
unity/RLottieUnity/Assets/LottiePlugin/Editor/: LottiePlugin.Editor.asmdef
unity/RLottieUnity/Assets/LottiePlugin/Editor/src/: AnimatedButtonEditor.cs  AnimatedImageEditor.cs  OpenPersistentDataPathFolder.cs
unity/RLottieUnity/Assets/LottiePlugin/Plugins/Linux/: librlottie.so.0
unity/RLottieUnity/Assets/LottiePlugin/Plugins/OSX/: libLottiePlugin.dylib  librlottie.0.2.dylib  librlottie.dylib
unity/RLottieUnity/Assets/LottiePlugin/Runtime/: AssemblyAttributes.cs  LottiePlugin.Runtime.asmdef
unity/RLottieUnity/Assets/LottiePlugin/Runtime/src/: LottieAnimation.cs  LottieAnimationsAtlas.cs  NativeBridge.cs
unity/RLottieUnity/Assets/LottiePlugin/Runtime/src/Support/: FIleSizeFormatter.cs  FilesHelper.cs  StreamingAssetsHelper.cs
unity/RLottieUnity/Assets/LottiePlugin/Runtime/src/UI/: AnimatedButton.cs  AnimatedImage.cs
unity/RLottieUnity/Assets/LottiePlugin/Runtime/src/Utility/: ThrowIf.cs
unity/RLottieUnity/Assets/LottiePlugin/Samples/SceneUI/: README.txt
unity/RLottieUnity/Assets/LottiePlugin/Samples/SceneUI/Scripts/Runtime/: LottiePlugin.Sample.SceneUI.Runtime.asmdef
unity/RLottieUnity/Assets/LottiePlugin/Samples/SceneUI/Shaders/: Unlit - Premultiplied Colored 3.shader
unity/RLottieUnity/Assets/LottiePlugin/Samples/SceneUI/StreamingAssets/: lottiefiles_sticker_2.json
unity/RLottieUnity/Assets/LottiePlugin/Samples/SceneUI/StreamingAssets/squid_game/: 0.json  12.json  15.json  16.json  17.json  20.json  5.json  7.json
unity/RLottieUnity/Assets/LottiePlugin/Samples~/SceneUI/Prefabs/UI/: LottieAnimationsPreview.prefab
unity/RLottieUnity/Assets/LottiePlugin/Samples~/SceneUI/Scenes/: SampleScene.unity
unity/RLottieUnity/Assets/LottiePlugin/Samples~/SceneUI/ScriptableObjects/: LottieAnimationsArray.asset
unity/RLottieUnity/Assets/LottiePlugin/Samples~/SceneUI/Scripts/Editor/: LottiePlugin.Sample.SceneUI.Editor.asmdef
unity/RLottieUnity/Assets/LottiePlugin/Samples~/SceneUI/StreamingAssets/: black_friday_animation.json  sticker.json
unity/RLottieUnity/Assets/LottiePlugin/Samples~/SceneUI/StreamingAssets/LottieSamples/: alright_sticker.json  concept_floral_branch_butterfly_and_tree.json  marketing.json
unity/RLottieUnity/Assets/LottiePlugin/Tests/Runtime/: LottiePlugin.Tests.Runtime.asmdef
unity/RLottieUnity/Assets/LottiePlugin/Tests/Runtime/src/: AnimatedImageTests.cs
unity/RLottieUnity/Assets/LottiePlugin/src/: LottieAnimation.cs  LottieAnimationsAtlas.cs  NativeBridge.cs  TestMonoBeh.cs
unity/RLottieUnity/Assets/LottiePlugin/src/UI/: AnimatedButton.cs  AnimatedToggle.cs
unity/RLottieUnity/Assets/LottiePlugin/src/UI/Editor/: AnimatedButtonEditor.cs  AnimatedImageToggleEditor.cs
unity/RLottieUnity/Assets/Materials/: UIMaterial.mat
unity/RLottieUnity/Assets/Scenes/: Main.unity
unity/RLottieUnity/Assets/Shaders/: UI-Default.shader
unity/RLottieUnity/Assets/Shaders/Shaders/: Unlit - Premultiplied Colored (TextureClip).shader  Unlit - Premultiplied Colored 1.shader  Unlit - Premultiplied Colored.shader
unity/RLottieUnity/Assets/StreamingAssets/: 83351-taking-the-duggy-out.json  83684-phone.json  lottiefiles_sticker_5.json  power_sticker.json
unity/RLottieUnity/Assets/StreamingAssets/LottieSamples/: butterfly_loading.json
unity/RLottieUnity/Assets/StreamingAssets/LottieSamples/squid_game/: 23.json  3.json  4.json  9.json
unity/RLottieUnity/Assets/StreamingAssets/squid_game/: 11.json  13.json  18.json  21.json  22.json
unity/RLottieUnity/Assets/_Presentation/LottieJsons/UI/LottiePlayerScreen/: hamburger_menu.json
unity/RLottieUnity/Assets/_Presentation/Prefabs/UI/: AnimationPreview.prefab  LottieAnimationsPreview.prefab
unity/RLottieUnity/Assets/_Presentation/Scenes/: SampleScene.unity
unity/RLottieUnity/Assets/_ScriptableObjects/: LottieAnimationsArray.asset
unity/RLottieUnity/Assets/_Shaders/Shaders/: Unlit - Premultiplied Colored 2.shader
unity/RLottieUnity/Assets/_Source/MyEditor/: MyEditor.asmdef
unity/RLottieUnity/Assets/_Source/MyEditor/src/Menu/: PopulateLottieAnimations.cs
unity/RLottieUnity/Assets/_Source/Presentation/: Presentation.asmdef
unity/RLottieUnity/Assets/_Source/Presentation/src/: LottiePlayerScreen.cs  MainMenu.cs
unity/RLottieUnity/Assets/_Source/Presentation/src/Data/: LottieAnimations.cs
unity/RLottieUnity/Assets/_Source/Presentation/src/State/: AppState.cs
unity/RLottieUnity/Assets/_Source/Presentation/src/Storage/: CanNotFindStickerPackException.cs  TelegramStickerStorage.cs
unity/RLottieUnity/Assets/_Source/Presentation/src/UI/: AnimationPreview.cs  AnimationsHomeScreen.cs  ExploreTelegramStickers.cs  LottieAnimationsPreview.cs  LottiePlayerScreen.cs  MainMenu.cs
unity/RLottieUnity/Assets/_Source/Presentation/src/Utility/: FilesHelper.cs
unity/RLottieUnity/Assets/_Source/Support/: Support.asmdef
unity/RLottieUnity/Assets/_Source/Support/src/StreamingAssets/: StreamingAssetsHelper.cs
unity/RLottieUnity/Assets/_Source/Support/src/ToStringHelpers/: FIleSizeFormatter.cs
unity/RLottieUnity/ProjectSettings/: ProjectSettings.asset
unity/RLottieUnity/UserSettings/: AndroidLogcatSettings.asset  EditorUserSettings.asset
(+31 files in other folders)
